tests/snapshots/run_file__callcc.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/callcc.bend
---
NumScott:
52

Scott:
52
