tests/snapshots/run_file__chars.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/chars.bend
---
NumScott:
λa (a String/Cons/tag 4660 λb (b String/Cons/tag 33 λc (c String/Cons/tag 55 "")))

Scott:
"ሴ!7"
