tests/snapshots/run_file__chars_forall.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/chars_forall.bend
---
8704
