tests/snapshots/run_file__chars_forall.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/chars_forall.hvm
---
Strict mode:

Result: 8704
- ITRS: 1
- TIME: 0.00s
- MIPS: 1.17
