tests/snapshots/run_file__chars_lambda.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/chars_lambda.bend
---
955
