tests/snapshots/run_file__def_bool_num.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/def_bool_num.hvm
---
Strict mode:
Errors:
In definition 'go':
  Non-exhaustive pattern matching rule. Default case of number type not covered.
